--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "GPL v3",
   "dependencies": {
     "express": "^4.18.1",
+    "lowdb": "^3.0.0",
     "nodemon": "^2.0.19"
   },
   "type": "module"
