--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "darthvanger@gmail.com",
   "license": "GPL v3",
   "dependencies": {
+    "babylonjs": "^5.30.0",
+    "babylonjs-materials": "^5.30.0",
     "express": "^4.18.1",
     "lowdb": "^3.0.0",
     "nodemon": "^2.0.19"
