--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babylonjs-materials": "^5.30.0",
     "express": "^4.18.1",
     "lowdb": "^3.0.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "ws": "^8.12.0"
   },
   "type": "module"
 }
