--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babylonjs-materials": "^5.30.0",
     "express": "^4.18.1",
     "lowdb": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "ws": "^8.12.0"
   },
