--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babylonjs": "^5.30.0",
     "babylonjs-materials": "^5.30.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "lowdb": "^3.0.0",
     "multer": "^1.4.5-lts.1",
